--- a/entropy_calculator.ipynb
+++ b/entropy_calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ae9bae0d",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "from scipy.stats import entropy\n",
     "\n",
-    "def calculate_entropies(data):\n",
+    "def calculate_entropy(data):\n",
     "    \"\"\"\n",
     "    Calculate min-entropy and Shannon entropy for given data.\n",
     "    \n",
@@ -30,10 +30,10 @@
     "    \n",
     "    return min_entropy, shannon_entropy\n",
     "\n",
-    "def remove_highest_prob_and_recalculate(data):\n",
+    "def remove_highest_prob(data):\n",
     "    \"\"\"\n",
     "    Remove the highest probability, redistribute the remaining probabilities,\n",
-    "    and recalculate min-entropy.\n",
+    "    and recalculate entropies.\n",
     "    \n",
     "    :param data: List or array of probabilities\n",
     "    :return: New min-entropy after removing highest probability\n",
@@ -49,32 +49,67 @@
     "    \n",
     "    # Redistribute the remaining probabilities\n",
     "    data = data / np.sum(data)\n",
-    "    \n",
-    "    # Recalculate min-entropy\n",
-    "    new_min_entropy = -np.log2(np.max(data))\n",
-    "    \n",
-    "    return new_min_entropy\n",
+    "        \n",
+    "    return calculate_entropy(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8c8ba91f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min-Entropy: 12.276020626670608\n",
+      "Shannon Entropy: 13.004426373315221\n"
+     ]
+    }
+   ],
+   "source": [
+    "#p = np.array([0.595, 0.058, 0.058, 0.058, 0.058, 0.058, 0.058, 0.058])\n",
+    "#p = np.array([0.5, 0.25, 0.125, 0.062, 0.062])\n",
+    "p = np.random.rand(10000)\n",
     "\n",
-    "# Example usage\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Get input from user\n",
-    "    input_data = input(\"Enter probabilities separated by commas: \")\n",
-    "    data = [float(x.strip()) for x in input_data.split(',')]\n",
-    "    \n",
-    "    # Calculate entropies\n",
-    "    min_ent, shannon_ent = calculate_entropies(data)\n",
-    "    print(f\"Min-entropy: {min_ent}\")\n",
-    "    print(f\"Shannon entropy: {shannon_ent}\")\n",
-    "    \n",
-    "    # Remove highest probability and recalculate\n",
-    "    new_min_ent = remove_highest_prob_and_recalculate(data)\n",
-    "    print(f\"New min-entropy after removing highest probability: {new_min_ent}\")"
+    "\n",
+    "# Calculate entropies\n",
+    "min_entropy, shannon_entropy = calculate_entropy(p)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Min-Entropy:\", min_entropy)\n",
+    "print(\"Shannon Entropy:\", shannon_entropy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f00835dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min-Entropy: 12.276066614497482\n",
+      "Shannon Entropy: 13.004282353306271\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate entropies\n",
+    "new_min, new_shannon = remove_highest_prob(p)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Min-Entropy:\", new_min)\n",
+    "print(\"Shannon Entropy:\", new_shannon)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c8ba91f",
+   "id": "de5fc3ab",
    "metadata": {},
    "outputs": [],
    "source": []
